# lexicon-tracker

./: .gitignore  README.md  flake.nix  package.json  tsconfig.json  vite.config.ts
.tangled/workflows/: build.yml
client/: package.json
client/src/: app.css  app.html
client/src/lib/: api.ts  filter.ts  format.ts  types.ts
client/src/lib/components/: BskyToggle.svelte  EventCard.svelte  FilterControls.svelte  RefreshControl.svelte  ShowControls.svelte  SortControls.svelte  StatsCard.svelte  StatusBadge.svelte
client/src/routes/: +page.server.ts  +page.svelte
nix/: client-modules.nix  client.nix  server.nix
server/: .gitignore  Cargo.toml
server/src/: api.rs  db.rs  error.rs  jetstream.rs  main.rs  utils.rs
server/src/db/: block.rs  handle.rs  mod.rs
server/src/db_old/: block.rs  mod.rs
src/: hooks.server.ts
src/lib/: db.ts  jetstream.ts  types.ts  worker.ts  worker_manager.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/api/events/: +server.ts
