[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = {version = "0.6", features = ["request-id"]}
atproto-jetstream = "0.9"
fjall = { version = "2", default-features = false, features = ["miniz"] }
rkyv = {version = "0.8", features = ["unaligned"]}
smol_str = { version = "0.3", features = ["serde"] }
papaya = "0.2"
serde = "1"
serde_json = "1.0.141"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
