[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing = "0.1"
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["tracing"] }
rustls = { version = "0.23", default-features = false, features = ["log", "ring", "std"] }
tokio-websockets = { version = "0.12", features = ["client", "rustls-platform-verifier", "getrandom", "ring"] }
futures-util = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "tracing", "json", "query"] }
axum-tws = { git = "https://github.com/90-008/axum-tws.git", features = ["http2"] }
tower-http = {version = "0.6", features = ["request-id", "trace", "compression-full"]}
fjall = { version = "2", default-features = false, features = ["miniz", "lz4"] }
rkyv = {version = "0.8", features = ["unaligned"]}
smol_str = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
scc = "2.3.4"
ordered-varint = "2.0.0"
threadpool = "1.8.1"
quanta = "0.12.6"
itertools = "0.14.0"
byteview = "0.6.1"
rayon = "1.10.0"
parking_lot = { version = "0.12", features = ["send_guard", "hardware-lock-elision"] }
rclite = "0.2.7"
zstd = "0.13.3"

[target.'cfg(target_env = "msvc")'.dependencies]
snmalloc-rs = "0.3.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
